src/regression/parse_pool/libtest2.sfp.out

sfc in program: parse_pool/libtest2.sfl
syntax error at line 2, position 5:
use aplication blink $(FENNEC_FOX_LIB)/Application/SimpleBlink
    ^
